--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "ng build --prod",
+    "build": "ng build your-project-name --configuration=production",
     "start": "ng serve",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
